# looker-mcp

./: .gitignore  README.md  looker_tools.py  pyproject.toml  requirements.txt  server.py
tests/: test_looker_tools.py
