[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "looker-mcp"
version = "0.1.0"
description = "A Model Context Protocol (MCP) server for Looker, utilizing the official Looker Python SDK."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "looker-sdk",
    "mcp"
]

[project.scripts]
looker-mcp = "server:main"

[tool.setuptools]
py-modules = ["server", "looker_tools"]
